--- a/default-config.json
+++ b/default-config.json
@@ -1,5 +1,5 @@
 {
-  "compiler_url": "http://dl.google.com/closure-compiler/compiler-20180101.zip",
-  "library_url": "http://github.com/google/closure-library/archive/v20170910.zip",
+  "compiler_url": "https://dl.google.com/closure-compiler/compiler-20180101.zip",
+  "library_url": "https://github.com/google/closure-library/archive/v20170910.zip",
   "log_level": "info"
 }
